# projun0

./: README.md  pyproject.toml  test_venda_saucedemo.robot
results/: .gitignore  log.html  output.xml  playwright-log.txt  report.html
