[project]
name = "projun0"
version = "0.1.0"
description = ""
authors = [
    {name = "Luan Severino",email = "luanmarcel.severino@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "robotframework (>=7.4.2,<8.0.0)",
    "robotframework-browser (>=19.12.7,<20.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
